# fastapi-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
fastapi_lens/: __init__.py
fastapi_lens/api/: report.py
fastapi_lens/core/: __init__.py  config.py
fastapi_lens/core/models/: __init__.py  endpoint_stats.py  request_record.py
fastapi_lens/middleware/: lens.py
fastapi_lens/storage/: sqlite.py
tests/: test_lens.py  test_new_features.py  test_ttl.py
